# ai-notetaker

./: .gitignore  Dockerfile.api  Dockerfile.bot  Dockerfile.pipeline  Dockerfile.transcription-worker  Dockerfile.web-ui  Dockerfile.zoom-bot  cloudbuild.yaml
.kiro/specs/meeting-notetaker/: .config.kiro  design.md  (+2 more)
api/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
api/src/: app.ts  db.ts  index.ts
bot/: .eslintrc.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
bot/src/: bot.ts  credentials.ts  index.ts  orchestrator.test.ts  orchestrator.ts  upload.ts
docs/: leverege_notetaker_gcp_setup.docx
infra/: README.md  cloudsql.tf  cloudtasks.tf  eventarc.tf  iam.tf  main.tf  outputs.tf  scheduler.tf  secrets.tf  storage.tf  terraform.tfvars.example  variables.tf  workspace_events.tf
infra/migrations/: 001_create_meetings.sql  002_create_speaker_labels.sql  003_create_sessions.sql  004_add_bot_statuses.sql
infra/scripts/: register-workspace-events.sh
pipeline/: pyproject.toml  pytest.ini  requirements.txt
pipeline/src/: main.py  pipeline.py  test_pipeline.py
transcription-worker/: pyproject.toml  pytest.ini  requirements.txt
transcription-worker/src/: app.py  db.py  gpu.py  main.py  tasks.py  test_app.py
web-ui/: .eslintrc.json  index.html  nginx.conf.template  package-lock.json  package.json  tsconfig.json  vitest.config.ts
web-ui/src/: App.tsx  styles.css
zoom-bot/: entrypoint.sh  pulse-default.pa  pytest.ini  requirements.txt
zoom-bot/src/: __init__.py  app.py  bot.py  log.py  main.py  test_bot.py
(+39 files in other folders)
